--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="/images/cloud.png" alt="cloud-img">
     <h1>I'm Tarun Suresh</h1>
     <h2>a web developer</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
